<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentaion.view.activities.NewEventActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/gradient_1"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/new_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/description"
            android:hint="@string/event_name"
            android:layout_margin="20dp"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_name"
            android:hint="@string/description"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="22sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/zone_linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toTopOf="@id/time_linear"
            android:weightSum="2"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_check_time"
                android:layout_width="180dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_city"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toTopOf="@id/time_linear"
                android:backgroundTint="@color/teal_200"
                android:text="@string/check_time_for_location"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/et_city"
                android:layout_width="180dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toEndOf="@id/btn_check_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toTopOf="@id/time_linear"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zone_linear"
            app:layout_constraintBottom_toTopOf="@id/size_spinner"
            android:weightSum="2"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_set_date"
                android:layout_width="175dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_check_time"
                app:layout_constraintEnd_toStartOf="@id/btn_set_time"
                app:layout_constraintBottom_toTopOf="@id/size_spinner"
                android:text="@string/set_date"
                android:fontFamily="sans-serif-medium"
                android:backgroundTint="@color/teal_200"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                app:layout_goneMarginEnd="5dp"/>

            <Button
                android:id="@+id/btn_set_time"
                android:layout_width="175dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toEndOf="@id/btn_set_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_linear"
                app:layout_constraintBottom_toTopOf="@id/size_spinner"
                android:text="@string/set_time"
                android:fontFamily="sans-serif-medium"
                android:backgroundTint="@color/teal_200"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_linear"
            app:layout_constraintBottom_toTopOf="@id/url_et"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/url_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_spinner"
            app:layout_constraintBottom_toTopOf="@id/btn_save_event"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/url"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_save_event"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url_et"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/teal_200"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save_event"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>